--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Raleway', sans-serif;
   list-style: none;
   text-decoration: none;
 }
@@ -60,7 +60,7 @@ header{
 
 .btn-default:hover{
   background-color: black;
-  color: #bd8610;
+  color: #eda814;
 }
 
 .mobile-btn{
@@ -78,4 +78,81 @@ header{
 .nav-item.active a{
   color: #1d1d1d;
   border-bottom: 3px solid #e9a209;
+}
+
+section{
+  padding: 28px 8%;
+}
+
+#home{
+  display: flex;
+  min-height: calc(100vh - 91px);
+  position: relative;
+}
+
+#home span{
+  color: #e9a209;
+}
+
+#cta{
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  margin-top: 5%;
+}
+
+#cta h1{
+  font-size: 4rem;
+}
+
+#cta p{
+  font-size: 1.2rem;
+}
+
+#cta-btns{
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  font-weight: 600; 
+}
+
+.social-media-btn{
+  display: flex;
+  gap: 1.2rem;
+  font-size: 1.8rem;
+}
+
+.social-media-btn a{
+  color: black;
+  transition: all .3s ease-out;
+}
+
+.social-media-btn a:hover{
+  color: #edba4c;
+  font-size: 2rem;
+}
+
+#banner{
+  display: flex;
+  align-items: start;
+  justify-content: end;
+  width: 70%;
+  margin-top: -2rem;
+}
+
+#banner img{
+  height: 100%;
+  width: fit-content;
+}
+
+.shape{
+  background-color: #ffe8b4;
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  border-radius: 40% 30% 0% 20%;
+  top: -10px;
+  right: 0;
+  z-index: -1;
 }
