--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,6 +16,10 @@ body{
 header{
   width: 100%;
   padding: 28px 8%;
+  position: sticky;
+  top: 0;
+  z-index: 5;
+  background-color: #1d1d1d;
 }
 
 #navBar{
@@ -36,7 +40,7 @@ header{
 }
 
 .nav-item a{
-  color: #000000;
+  color: #ffffff;
   font-weight: 600;
   transition: all .3s;
 }
@@ -49,8 +53,9 @@ header{
 .btn-default{
   background-color: #e9a209;
   color: #000000;
+  font-weight: 500;
   padding: .5rem 1rem;
-  border: none;
+  border: 2px solid transparent;
   border-radius: 25px;
   cursor: pointer;
   font-size: 16px;
@@ -59,7 +64,8 @@ header{
 }
 
 .btn-default:hover{
-  background-color: black;
+  border: 2px solid #eda814;
+  background-color: transparent;
   color: #eda814;
 }
 
@@ -76,7 +82,7 @@ header{
 } */
 
 .nav-item.active a{
-  color: #1d1d1d;
+  color: #eda814  ;
   border-bottom: 3px solid #e9a209;
 }
 
@@ -155,4 +161,85 @@ section{
   top: -10px;
   right: 0;
   z-index: -1;
+}
+
+#menu{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+#menu .section-title{
+  color: #eda814;
+  font-size: 1.563rem;
+}
+
+.section-subtitle{
+  font-size: 2.1875rem;
+}
+
+#pratos{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 32px;
+}
+
+.prato{
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    background-color: #ffffff;
+    gap: 18px;
+    width: 25%;
+    padding: 20px;
+    box-shadow: 4px 5px 5px rgba(0,0,0,0.5);
+    text-align: center;
+}
+
+.prato .prato-coracao{
+  position: absolute;
+  background-color: #eda814;
+  right: 0;
+  top: 0;
+  padding: .6rem;
+  border-bottom-left-radius: 10px;
+  font-size: 1.2rem;
+  cursor: pointer;
+
+  transition: all .3s ease-out;
+}
+
+.prato .prato-coracao:hover{
+  background-color: #1d1d1d;
+  color: #eda814;
+}
+
+.prato-avali i{
+  cursor: pointer;
+}
+
+.prato-avali i:hover{
+  color: #eda814;
+}
+
+.prato .prato-valor{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: .7rem;
+}
+
+.prato .prato-valor h4{
+  font-size: 1.2rem;
+}
+
+.prato .prato-valor button i{
+  font-size: 1.2rem;
 }
