--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,5 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
+::selection{
+    background-color: #eda814;
+    color: black;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  ::-webkit-scrollbar-track { /*define o estilo da área da scrollbar onde o conteúdo não está visível.*/
+    background: transparent; 
+  }
+  
+  ::-webkit-scrollbar-thumb { /*define o estilo do polegar (a parte que você arrasta) da scrollbar.*/
+    background: #e9a209;
+    border-radius: 5px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #edba4c;
+  }
+
 *{
   padding: 0;
   margin: 0;
