--- a/css/responsive.css
+++ b/css/responsive.css
@@ -57,6 +57,30 @@
   .prato{
     width: calc(50% - 12px);
   }
+
+  #avalia{
+    flex-direction: column;
+  }
+
+  #avalia .img-chef{
+    display: none;
+  }
+
+  #avalia_content{
+    width: 70%;
+  }
+
+  #avalia_content h2{
+    text-align: center;
+  }
+
+  #avalia_content h3{
+    margin-bottom: 2rem;
+  }
+
+  #avalia_content button{
+    margin-top: 2rem;
+  }
 }
 
 @media screen and (max-width: 600px){
@@ -67,4 +91,26 @@
   .section-subtitle{
     text-align: center;
   }
+
+  .feedback{
+    flex-direction: column;
+    padding: 0 0 .8rem 0;
+  }
+
+  #avalia_content{
+    box-shadow: none;
+  }
+
+  #avalia_content h3{
+    font-size: 1.6rem;
+  }
+
+  #avalia_content button{
+    width: 100%;
+  }
+
+  #footer_items{
+  flex-direction: column;
+  gap: 1rem;
+}
 }
