terminei o site e adicionei animação no scroll

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -29,6 +29,7 @@
   font-family: 'Raleway', sans-serif;
   list-style: none;
   text-decoration: none;
+  overflow-x: hidden;
 }
 
 html{
@@ -104,14 +105,11 @@ header{
   display: none;
 }
 
-/* #btn-mobile{
-  display: none;
-} */
-
+/* 
 .nav-item.active a{
   color: #eda814  ;
   border-bottom: 3px solid #e9a209;
-}
+} */
 
 section{
   padding: 28px 8%;
@@ -196,7 +194,6 @@ section{
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  margin: 3rem 0;
 }
 
 .section-title{
@@ -278,7 +275,6 @@ section{
   align-items: center;
   justify-content: center;
   gap: 5rem;
-  margin: 3rem 0;
 }
 
 #avalia .img-chef{
