--- a/css/responsive.css
+++ b/css/responsive.css
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    gap: .8rem;
+    gap: 1em;
   }
 
   #mobile-menu a{
