ajustei as estrelas das avaliações

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -97,6 +97,10 @@
     padding: 0 0 .8rem 0;
   }
 
+  .feedbackContent p{
+    font-size: .9rem;
+  }
+
   #avalia_content{
     box-shadow: none;
   }
