--- a/css/estilo.css
+++ b/css/estilo.css
@@ -70,6 +70,9 @@ header{
 .nav-item a{
   color: #ffffff;
   font-weight: 600;
+  display: flex;
+  align-items: center;
+  gap: .3rem;
   transition: all .3s;
 }
 
@@ -79,6 +82,9 @@ header{
 }
 
 .btn-default{
+  display: flex;
+  align-items: center;
+  gap: .2rem;
   background-color: #e9a209;
   color: #000000;
   font-weight: 500;
