--- a/css/responsive.css
+++ b/css/responsive.css
@@ -101,9 +101,9 @@
     font-size: .9rem;
   }
 
-  .prato{
+  /* .prato{
     box-shadow: none;
-  }
+  } */
 
   #avalia_content{
     box-shadow: none;
