--- a/css/estilo.css
+++ b/css/estilo.css
@@ -197,6 +197,7 @@ section{
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  margin: 2rem 0;
 }
 
 .section-title{
@@ -278,6 +279,7 @@ section{
   align-items: center;
   justify-content: center;
   gap: 5rem;
+  margin: 2rem 0;
 }
 
 #avalia .img-chef{
