--- a/css/estilo.css
+++ b/css/estilo.css
@@ -197,7 +197,7 @@ section{
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  margin: 2rem 0;
+  /* margin: 2rem 0; */
 }
 
 .section-title{
@@ -274,12 +274,11 @@ section{
 }
 
 #avalia{
-  min-height: calc(100vh - 91px);
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 5rem;
-  margin: 2rem 0;
+  /* margin: 2rem 0; */
 }
 
 #avalia .img-chef{
