--- a/css/estilo.css
+++ b/css/estilo.css
@@ -29,12 +29,12 @@
   font-family: 'Raleway', sans-serif;
   list-style: none;
   text-decoration: none;
-  overflow-x: hidden;
 }
 
 html{
   scroll-behavior: smooth;
   scroll-padding-top: 1.8rem;
+  overflow-x: hidden; 
 }
 
 body{
@@ -196,7 +196,7 @@ section{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   /* margin: 2rem 0; */
 }
 
